--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,17 @@
-/* write your override styles here */
+body {
+  background: black url(../images/sketch.jpg) no-repeat center;
+  background-size: cover;
+}
+
+#wall {
+  position: relative;
+  margin: 40px auto;
+  width: 980px;
+  height: 622px;
+  background: url(../images/wall.jpg) no-repeat center;
+  -moz-box-shadow: 15px 15px 47px lime, -15px -15px 47px aqua;
+  -webkit-box-shadow: 15px 15px 47px lime, -15px -15px 47px aqua;
+  box-shadow: 15px 15px 47px lime, -15px -15px 47px aqua;
+  border: 15px solid white;
+  border-bottom: 60px solid white;
+}
